[gd_scene load_steps=5 format=3 uid="uid://ca62o65ibtuhx"]

[ext_resource type="Script" path="res://Maps/_BaseMaterials/base_map_script.gd" id="1_eqlwx"]
[ext_resource type="PackedScene" uid="uid://d8pna4apkoj2" path="res://Maps/_BaseMaterials/common_tilemap.tscn" id="2_epktx"]
[ext_resource type="Script" path="res://Maps/_BaseMaterials/condition_script.gd" id="3_1mcuf"]
[ext_resource type="Script" path="res://Maps/_BaseMaterials/docks.gd" id="3_gf41w"]

[node name="BaseMap" type="Node2D"]
z_index = -1
z_as_relative = false
y_sort_enabled = true
script = ExtResource("1_eqlwx")

[node name="CommonTileMap" parent="." instance=ExtResource("2_epktx")]

[node name="Spawns" type="Node2D" parent="."]

[node name="PlayerSpawn" type="Marker2D" parent="Spawns"]
unique_name_in_owner = true
position = Vector2(0, 1)

[node name="EnemySpawns" type="Node2D" parent="Spawns"]
unique_name_in_owner = true

[node name="ItemSpawns" type="Node2D" parent="Spawns"]
unique_name_in_owner = true

[node name="Condition" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("3_1mcuf")

[node name="Docks" type="Node2D" parent="."]
script = ExtResource("3_gf41w")

[node name="East" type="Marker2D" parent="Docks"]
unique_name_in_owner = true

[node name="South" type="Marker2D" parent="Docks"]
unique_name_in_owner = true

[node name="West" type="Marker2D" parent="Docks"]
unique_name_in_owner = true

[node name="North" type="Marker2D" parent="Docks"]
unique_name_in_owner = true
